@@ -49,6 +49,12 @@
 	* debug.h: Add macro guard.
 	* breakpoints.c: Fix MIPS breakpoints.
 
+2009-10-06  Joe Damato <ice799@gmail.com>
+
+    * handle_event.c: Do not print signals when -b is used.
+    * options.h, options.c: A new option (-b) was added.
+    * ltrace.1: Documentation for -b was added.
+
 2009-09-07  Joe Damato <ice799@gmail.com>
 
     * options.c, options.h: A new option (-g) was added.
